--- a/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
@@ -1,82 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/deepPurplePrimary">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvTeamOne"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="1dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:text="Team #1"
-        android:textSize="20sp" />
+        android:layout_margin="5dp"
+        android:elevation="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:padding="10dp"
+        app:cardCornerRadius="4dp">
 
-    <TextView
-        android:id="@+id/tvVSHelper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvTeamOne"
-        android:layout_centerHorizontal="true"
-        android:text="vs"
-        android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvTeamTwo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        android:text="Team #2"
-        android:textSize="20sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="1dp"
-        android:layout_below="@id/tvTeamOne"
-        android:text="Time" />
+                <TextView
+                    android:id="@+id/tvTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:gravity="center"
+                    android:text="Time" />
 
-    <TextView
-        android:id="@+id/tvPrediction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/tvVSHelper"
-        android:text="Prediction" />
-    <TextView
-        android:id="@+id/tvOddSymbol"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="1dp"
-        android:layout_below="@id/tvTeamTwo"
-        android:text="€" />
-    <TextView
-        android:id="@+id/tvOdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toStartOf="@id/tvOddSymbol"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/tvTeamTwo"
-        android:text="Odd" />
+            </LinearLayout>
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvTeamOne"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:text="Team #1"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tvVSHelper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="vs"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tvTeamTwo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.4"
+                    android:gravity="center"
+                    android:text="Team #2"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tvOddSymbolText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:gravity="end"
+                    android:text="Odd: "
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvOdd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:text="Odd" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp">
+
+                <TextView
+                    android:id="@+id/tvPredictionSymbol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:gravity="end"
+                    android:text="Tip: "
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvPrediction"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:text="Prediction" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+        <!--
+        <TextView
+            android:id="@+id/tvOddSymbol"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="1dp"
+            android:layout_below="@id/tvTeamTwo"
+            android:text="€" />
+        -->
+
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
