--- a/Betman/app/src/main/res/layout/tab_view_today.xml
+++ b/Betman/app/src/main/res/layout/tab_view_today.xml
@@ -13,7 +13,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:background="@color/deepPurplePrimary"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
