--- a/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
@@ -98,7 +98,7 @@
                 android:layout_marginBottom="4dp">
 
                 <TextView
-                    android:id="@+id/tvPredictionSymbol"
+                    android:id="@+id/tvPredictionHelper"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
