--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -6,22 +6,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="wrap_content"
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="VIP Tab View"
-        android:layout_centerInParent="true"/>
+        android:theme="@style/AppTheme.AppBarOverlay">
+        
     <com.ogaclejapan.smarttablayout.SmartTabLayout
         android:id="@+id/vipTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="50dp"
         app:stl_indicatorAlwaysInCenter="false"
         app:stl_indicatorWithoutPadding="false"
         app:stl_indicatorInFront="false"
         app:stl_indicatorInterpolation="smart"
         app:stl_indicatorGravity="bottom"
         app:stl_indicatorColor="#ffffff"
-        app:stl_indicatorThickness="30dp"
+        app:stl_indicatorThickness="50dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorCornerRadius="2dp"
         app:stl_overlineColor="#4dffffff"
@@ -42,6 +44,7 @@
         app:stl_titleOffset="24dp"
         app:stl_drawDecorationAfterTab="false"
         />
+</android.support.design.widget.AppBarLayout>
 
 <android.support.v4.view.ViewPager
 android:id="@+id/vpVIPTabContainer"
