--- a/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
@@ -24,4 +24,9 @@
             android:layout_height="wrap_content" >
         </ProgressBar>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="VIP TIPS" />
 </RelativeLayout>
