--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -6,50 +6,72 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:id="@+id/subLayout"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        >
 
-    <com.ogaclejapan.smarttablayout.SmartTabLayout
-        android:id="@+id/vipTabLayout"
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/vipAppBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
+
+            <com.ogaclejapan.smarttablayout.SmartTabLayout
+                android:id="@+id/vipTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:stl_indicatorAlwaysInCenter="false"
+                app:stl_indicatorWithoutPadding="false"
+                app:stl_indicatorInFront="false"
+                app:stl_indicatorInterpolation="smart"
+                app:stl_indicatorGravity="bottom"
+                app:stl_indicatorColor="#ffffff"
+                app:stl_indicatorThickness="50dp"
+                app:stl_indicatorWidth="auto"
+                app:stl_indicatorCornerRadius="2dp"
+                app:stl_overlineColor="#4dffffff"
+                app:stl_overlineThickness="0dp"
+                app:stl_underlineColor="#4dffffff"
+                app:stl_underlineThickness="1dp"
+                app:stl_dividerColor="#4dffffff"
+                app:stl_dividerThickness="0dp"
+                android:background="@color/deepPurplePrimaryDark"
+                app:stl_defaultTabBackground="?attr/selectableItemBackground"
+                app:stl_defaultTabTextAllCaps="false"
+                app:stl_defaultTabTextColor="#FC000000"
+                app:stl_defaultTabTextSize="12sp"
+                app:stl_defaultTabTextHorizontalPadding="16dp"
+                app:stl_defaultTabTextMinWidth="0dp"
+                app:stl_distributeEvenly="true"
+                app:stl_clickable="true"
+                app:stl_titleOffset="24dp"
+                app:stl_drawDecorationAfterTab="false"
+                />
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vpVIPTabContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/noSubLayout"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:stl_indicatorAlwaysInCenter="false"
-        app:stl_indicatorWithoutPadding="false"
-        app:stl_indicatorInFront="false"
-        app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorGravity="bottom"
-        app:stl_indicatorColor="#ffffff"
-        app:stl_indicatorThickness="50dp"
-        app:stl_indicatorWidth="auto"
-        app:stl_indicatorCornerRadius="2dp"
-        app:stl_overlineColor="#4dffffff"
-        app:stl_overlineThickness="0dp"
-        app:stl_underlineColor="#4dffffff"
-        app:stl_underlineThickness="1dp"
-        app:stl_dividerColor="#4dffffff"
-        app:stl_dividerThickness="0dp"
-        android:background="@color/deepPurplePrimaryDark"
-        app:stl_defaultTabBackground="?attr/selectableItemBackground"
-        app:stl_defaultTabTextAllCaps="false"
-        app:stl_defaultTabTextColor="#FC000000"
-        app:stl_defaultTabTextSize="12sp"
-        app:stl_defaultTabTextHorizontalPadding="16dp"
-        app:stl_defaultTabTextMinWidth="0dp"
-        app:stl_distributeEvenly="true"
-        app:stl_clickable="true"
-        app:stl_titleOffset="24dp"
-        app:stl_drawDecorationAfterTab="false"
-        />
-</android.support.design.widget.AppBarLayout>
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/btnSub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Subscribe"
+            android:textAllCaps="false"/>
 
-<android.support.v4.view.ViewPager
-android:id="@+id/vpVIPTabContainer"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    />
+    </RelativeLayout>
+
 </RelativeLayout>
