--- a/Betman/app/src/main/res/layout/tab_view_today.xml
+++ b/Betman/app/src/main/res/layout/tab_view_today.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srlSwipeRefresh"
+        android:id="@+id/tvTodaySwipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
@@ -22,7 +22,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
-        android:id="@+id/linlaHeaderProgress"
+        android:id="@+id/tvTodayLoadingProgress"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
