--- a/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
@@ -16,9 +16,11 @@
         app:cardCornerRadius="4dp">
 
         <LinearLayout
+            android:id="@+id/llHistoryItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@android:color/holo_red_light">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,20 +29,26 @@
 
                 <TextView
                     android:id="@+id/tvDate"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:gravity="center"
                     android:layout_weight="0.5"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="12sp"
                     android:text="Date" />
 
                 <TextView
                     android:id="@+id/tvTime"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:gravity="center"
                     android:layout_weight="0.5"
+                    android:gravity="end"
+                    android:layout_marginRight="5dp"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/darker_gray"
+
                     android:text="Time" />
 
             </LinearLayout>
@@ -88,7 +96,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="0.3">
+                    android:layout_weight="0.5">
                 <TextView
                     android:id="@+id/tvOddSymbolText"
                     android:layout_width="wrap_content"
@@ -108,36 +116,13 @@
                     android:text="Odd" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="0.4">
-
-                    <TextView
-                        android:id="@+id/tvFinalScoreHelper"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight="0.5"
-                        android:gravity="end"
-                        android:text="Tip: "
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tvFinalScore"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight="0.5"
-                        android:text="Final Score" />
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="0.3">
+                    android:layout_weight="0.5"
+                    android:gravity="center">
 
                     <TextView
                         android:id="@+id/tvPredictionHelper"
@@ -165,15 +150,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:layout_marginBottom="5dp"
+                >
 
-                <TextView
-                    android:id="@+id/tvResult"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:textSize="26dp"
-                    android:text="Result"/>
+                    <TextView
+                        android:id="@+id/tvFinalScoreHelper"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="0.5"
+                        android:gravity="end"
+                        android:textSize="18sp"
+                        android:text="Score: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvFinalScore"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:textSize="18sp"
+                        android:layout_weight="0.5"
+                        android:text="Final Score" />
 
             </LinearLayout>
 
