--- a/Betman/app/src/main/res/values/colors.xml
+++ b/Betman/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black">#000000</color>
     <color name="tabActive">#505050</color>
     <color name="tabInactive">#600050</color>
+    <color name="historyWonGreen">#69F0AE</color>
 </resources>
