--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -55,6 +55,7 @@
             android:id="@+id/vpVIPTabContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/vipAppBarLayout"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </RelativeLayout>
 
