--- a/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/lvTVBookmarked"
+        android:id="@+id/lvTVVIPTips"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
     <LinearLayout
-        android:id="@+id/tvTodayLoadingProgress"
+        android:id="@+id/tvVIPTipsLoadingProgress"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
@@ -24,9 +24,4 @@
             android:layout_height="wrap_content" >
         </ProgressBar>
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="VIP TIPS" />
 </RelativeLayout>
