--- a/Betman/app/src/main/res/layout/activity_main.xml
+++ b/Betman/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,13 @@
             app:stl_indicatorInFront="false"
             app:stl_indicatorInterpolation="smart"
             app:stl_indicatorGravity="bottom"
-            app:stl_indicatorColor="#ffffff"
+            app:stl_indicatorColor="@color/deepPurplePrimary"
             app:stl_indicatorThickness="30dp"
             app:stl_indicatorWidth="auto"
             app:stl_indicatorCornerRadius="2dp"
             app:stl_overlineColor="#4dffffff"
             app:stl_overlineThickness="0dp"
-            app:stl_underlineColor="#4dffffff"
+            app:stl_underlineColor="#000"
             app:stl_underlineThickness="1dp"
             app:stl_dividerColor="#4dffffff"
             app:stl_dividerThickness="0dp"
