--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -36,7 +36,7 @@
                 app:stl_dividerThickness="0dp"
                 app:stl_drawDecorationAfterTab="false"
                 app:stl_indicatorAlwaysInCenter="false"
-                app:stl_indicatorColor="#ffffff"
+                app:stl_indicatorColor="#ffd700"
                 app:stl_indicatorCornerRadius="2dp"
                 app:stl_indicatorGravity="bottom"
                 app:stl_indicatorInFront="false"
@@ -47,7 +47,7 @@
                 app:stl_overlineColor="#4dffffff"
                 app:stl_overlineThickness="0dp"
                 app:stl_titleOffset="24dp"
-                app:stl_underlineColor="#4dffffff"
+                app:stl_underlineColor="#000"
                 app:stl_underlineThickness="1dp" />
         </android.support.design.widget.AppBarLayout>
 
