--- a/Betman/app/src/main/res/layout/tab_view_vip_live.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip_live.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:background="@color/deepPurplePrimaryDark"
         android:divider="@null"
         android:dividerHeight="0dp"/>
     <LinearLayout
