--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -36,7 +36,7 @@
                 app:stl_dividerThickness="0dp"
                 app:stl_drawDecorationAfterTab="false"
                 app:stl_indicatorAlwaysInCenter="false"
-                app:stl_indicatorColor="#ffd700"
+                app:stl_indicatorColor="@color/lvItemVipLiveBackground"
                 app:stl_indicatorCornerRadius="2dp"
                 app:stl_indicatorGravity="bottom"
                 app:stl_indicatorInFront="false"
