--- a/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
@@ -13,6 +13,7 @@
         android:elevation="5dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
+        app:cardBackgroundColor="#f9f9f9"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
