--- a/Betman/app/src/main/res/layout/activity_main.xml
+++ b/Betman/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,9 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/logo_2"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:background="@drawable/stadium"
             />
         <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:id="@+id/tabsLayout"
@@ -39,7 +40,7 @@
             app:stl_dividerThickness="0dp"
             app:stl_drawDecorationAfterTab="false"
             app:stl_indicatorAlwaysInCenter="false"
-            app:stl_indicatorColor="@color/deepPurplePrimary"
+            app:stl_indicatorColor="@color/myBackground"
             app:stl_indicatorCornerRadius="2dp"
             app:stl_indicatorGravity="bottom"
             app:stl_indicatorInFront="false"
