--- a/Betman/app/src/main/res/values/colors.xml
+++ b/Betman/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="tabInactive">#600050</color>
     <color name="historyWonGreen">#69F0AE</color>
     <color name="lvItemVipLiveBackground">#03a9f4</color>
-    <color name="myBackground">#9c93ceed</color>
+    <color name="myBackground">#29B6F6</color>
 </resources>
