--- a/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -19,8 +18,8 @@
             android:id="@+id/llHistoryItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@android:color/holo_red_light">
+            android:background="@android:color/holo_red_light"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,25 +30,25 @@
                     android:id="@+id/tvDate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:layout_marginTop="2dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:text="Date"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="12sp"
-                    android:text="Date" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/tvTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:layout_marginTop="2dp"
                     android:layout_weight="0.5"
                     android:gravity="end"
-                    android:layout_marginRight="5dp"
-                    android:textSize="12sp"
+                    android:text="Time"
                     android:textColor="@android:color/darker_gray"
 
-                    android:text="Time" />
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -92,37 +91,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="0.5">
-                <TextView
-                    android:id="@+id/tvOddSymbolText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
                     android:layout_weight="0.5"
-                    android:gravity="end"
-                    android:text="Odd: "
-                    android:textStyle="bold" />
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tvOdd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="0.5"
-                    android:text="Odd" />
+                    <TextView
+                        android:id="@+id/tvOddSymbolText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="0.5"
+                        android:gravity="end"
+                        android:text="Odd: "
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvOdd"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="0.5"
+                        android:text="Odd" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_weight="0.5"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tvPredictionHelper"
@@ -151,28 +152,40 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                >
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp">
 
-                    <TextView
-                        android:id="@+id/tvFinalScoreHelper"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_weight="0.5"
-                        android:gravity="end"
-                        android:textSize="18sp"
-                        android:text="Score: "
-                        android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/lvImgFirstBallHistoryTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/football_icon" />
 
-                    <TextView
-                        android:id="@+id/tvFinalScore"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:textSize="18sp"
-                        android:layout_weight="0.5"
-                        android:text="Final Score" />
+                <TextView
+                    android:id="@+id/tvFinalScoreHelper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:gravity="end"
+                    android:text="Score: "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/tvFinalScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="0.5"
+                    android:text="Final Score"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/lvImgSecondBallHistoryTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/football_icon" />
             </LinearLayout>
 
         </LinearLayout>
