--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
@@ -24,7 +24,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginTop="4dp"
-                android:layout_weight="0.6"
+                android:layout_weight="0.5"
                 android:orientation="vertical">
 
                 <TextView
@@ -54,11 +54,25 @@
                     android:textSize="20sp" />
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/lvImgFirstBallVIPLiveTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/football_icon"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.4"
+                android:layout_weight="0.5"
                 android:orientation="vertical">
 
                 <LinearLayout
