--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,8 +12,8 @@
         android:elevation="5dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
-        app:cardCornerRadius="4dp"
-        app:cardBackgroundColor="@color/lvItemVipLiveBackground">
+        app:cardBackgroundColor="@color/lvItemVipLiveBackground"
+        app:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -97,7 +96,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp">
+                android:layout_marginBottom="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp">
+
+                <ImageView
+                    android:id="@+id/lvImgFirstBallVIPTipsTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/football_icon" />
 
                 <TextView
                     android:id="@+id/tvPredictionHelper"
@@ -116,7 +123,11 @@
                     android:layout_marginTop="2dp"
                     android:layout_weight="0.5"
                     android:text="Prediction" />
-
+                <ImageView
+                    android:id="@+id/lvImgFirstBallVIPTipsTab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@mipmap/football_icon" />
             </LinearLayout>
 
 
