in-app sub fixed changed tab colors removed icons of tabs

--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_tips.xml
@@ -12,7 +12,7 @@
         android:elevation="5dp"
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
-        app:cardBackgroundColor="@color/lvItemVipLiveBackground"
+        app:cardBackgroundColor="#f9f9f9"
         app:cardCornerRadius="4dp">
 
         <LinearLayout
