--- a/Betman/app/src/main/res/layout/activity_main.xml
+++ b/Betman/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,15 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/myBackground"
+        android:background="@color/black"
+        android:backgroundTint="#85a6a3a3"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="130dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/stadium"
+            android:background="@drawable/stadium_1"
             />
         <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:id="@+id/tabsLayout"
@@ -40,7 +41,7 @@
             app:stl_dividerThickness="0dp"
             app:stl_drawDecorationAfterTab="false"
             app:stl_indicatorAlwaysInCenter="false"
-            app:stl_indicatorColor="@color/myBackground"
+            app:stl_indicatorColor="@color/white"
             app:stl_indicatorCornerRadius="2dp"
             app:stl_indicatorGravity="bottom"
             app:stl_indicatorInFront="false"
