--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
@@ -13,7 +13,7 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:padding="10dp"
         app:cardCornerRadius="4dp"
-        app:cardBackgroundColor="@color/lvItemVipLiveBackground">
+        app:cardBackgroundColor="#f9f9f9">
 
         <LinearLayout
             android:layout_width="match_parent"
