--- a/Betman/app/src/main/res/layout/tab_view_vip.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip.xml
@@ -22,7 +22,7 @@
             <com.ogaclejapan.smarttablayout.SmartTabLayout
                 android:id="@+id/vipTabLayout"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="30dp"
                 android:background="@color/deepPurplePrimaryDark"
                 app:stl_clickable="true"
                 app:stl_defaultTabBackground="?attr/selectableItemBackground"
@@ -36,7 +36,7 @@
                 app:stl_dividerThickness="0dp"
                 app:stl_drawDecorationAfterTab="false"
                 app:stl_indicatorAlwaysInCenter="false"
-                app:stl_indicatorColor="@color/lvItemVipLiveBackground"
+                app:stl_indicatorColor="#e0e0e0"
                 app:stl_indicatorCornerRadius="2dp"
                 app:stl_indicatorGravity="bottom"
                 app:stl_indicatorInFront="false"
@@ -95,7 +95,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="Subscribe"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"
+            android:layout_margin="20dp"/>
 
         <TextView
             android:layout_width="200dp"
