--- a/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
+++ b/Betman/app/src/main/res/layout/tab_view_vip_tips.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/deepPurplePrimaryDark"
+        android:background="@color/deepPurplePrimary"
         android:divider="@null"
         android:dividerHeight="0dp"/>
     </android.support.v4.widget.SwipeRefreshLayout>
