--- a/Betman/app/src/main/res/values/colors.xml
+++ b/Betman/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="historyWonGreen">#69F0AE</color>
     <color name="lvItemVipLiveBackground">#03a9f4</color>
     <color name="myBackground">#29B6F6</color>
+    <color name="white">#ffffff</color>
 </resources>
