--- a/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
@@ -42,29 +42,29 @@
 
                 <TextView
                     android:id="@+id/tvTeamOne"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_weight="1"
                     android:gravity="center"
                     android:text="Team #1"
-                    android:textSize="20sp" />
+                     />
 
                 <TextView
                     android:id="@+id/tvVSHelper"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:layout_weight="0"
                     android:text="vs"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/tvTeamTwo"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.4"
+                    android:layout_weight="1"
                     android:gravity="center"
                     android:text="Team #2"
-                    android:textSize="20sp" />
+                     />
 
             </LinearLayout>
 
