--- a/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_vip_live.xml
@@ -33,8 +33,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.4"
                     android:gravity="center"
-                    android:text="Team #1"
-                    android:textSize="20sp" />
+                    android:text="Team #1" />
 
                 <TextView
                     android:id="@+id/tvVSHelper"
@@ -42,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="vs"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/tvTeamTwo"
@@ -50,8 +49,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.4"
                     android:gravity="center"
-                    android:text="Team #2"
-                    android:textSize="20sp" />
+                    android:text="Team #2" />
 
             </LinearLayout>
             <LinearLayout
