--- a/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_history.xml
@@ -63,8 +63,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
+                    android:maxLines="1"
                     android:gravity="center"
-                    android:text="Team #1" />
+                    android:text="Team #1"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"/>
 
                 <TextView
                     android:id="@+id/tvVSHelper"
@@ -79,8 +82,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
+                    android:maxLines="1"
                     android:gravity="center"
-                    android:text="Team #2"/>
+                    android:text="Team #2"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"/>
 
             </LinearLayout>
 
