--- a/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
+++ b/Betman/app/src/main/res/layout/lv_adapter_tv_today.xml
@@ -30,6 +30,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
                     android:gravity="center"
+                    android:textSize="15sp"
                     android:text="Time" />
 
             </LinearLayout>
@@ -47,6 +48,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Team #1"
+                    android:textSize="15sp"
                     android:maxLines="1"
                     android:layout_marginLeft="3dp"
                     android:layout_marginRight="3dp"/>
@@ -66,6 +68,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Team #2"
+                    android:textSize="15sp"
                     android:maxLines="1"
                     android:layout_marginRight="3dp"/>
 
@@ -92,6 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
                     android:layout_weight="0.5"
+                    android:textSize="15sp"
                     android:text="Odd" />
 
             </LinearLayout>
@@ -124,6 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
                     android:layout_weight="0.5"
+                    android:textSize="15sp"
                     android:text="Prediction" />
 
                 <ImageView
