--- a/Betman/app/src/main/res/layout/tab_view_today.xml
+++ b/Betman/app/src/main/res/layout/tab_view_today.xml
@@ -1,25 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/tvTodaySwipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
         <ListView
             android:id="@+id/lvTVToday"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:background="@color/deepPurplePrimary"
             android:divider="@null"
-            android:dividerHeight="0dp"
-            />
+            android:dividerHeight="0dp" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/tvTodayViewsBar"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true">-->
+    <!--<ImageView-->
+    <!--android:id="@+id/tvTodayIVViews"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentStart="true"-->
+    <!--android:background="@drawable/ic_visibility_black_24dp"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:layout_marginStart="80dp"/>-->
+    <!--<TextView-->
+    <!--android:layout_toRightOf="@+id/tvTodayIVViews"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:gravity="center"-->
+    <!--android:padding="10dp"-->
+    <!--android:textColor="@color/black"-->
+    <!--android:text="Views : " />-->
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="100dp"-->
+    <!--android:gravity="center"-->
+    <!--android:textColor="@color/black"-->
+    <!--android:padding="10dp"-->
+    <!--android:text="968" />-->
+    <!--</RelativeLayout>-->
+
 
     <LinearLayout
         android:id="@+id/tvTodayLoadingProgress"
@@ -27,13 +61,12 @@
         android:layout_height="fill_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ProgressBar
             android:id="@+id/pbHeaderProgress"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </ProgressBar>
+            android:layout_height="wrap_content"></ProgressBar>
     </LinearLayout>
 
 </RelativeLayout>
