--- a/Betman/app/src/main/res/layout/lv_item_ad_display.xml
+++ b/Betman/app/src/main/res/layout/lv_item_ad_display.xml
@@ -46,8 +46,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@mipmap/basketball_icon"
                     android:elevation="2dp" />
@@ -57,8 +59,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/btnShowAd"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@mipmap/basketball_icon"
                     android:elevation="1dp" />
 
@@ -67,8 +71,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/btnShowAd"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@mipmap/football_icon"
                     android:elevation="1dp" />
             </RelativeLayout>
@@ -93,8 +99,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginTop="10dp"
                     android:background="@mipmap/basketball_icon"
                     android:elevation="2dp" />
@@ -119,8 +127,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/adLoadingButton"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
                     android:background="@mipmap/basketball_icon"
                     android:elevation="1dp" />
 
@@ -129,8 +139,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/adLoadingButton"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_marginBottom="10dp"
                     android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@mipmap/football_icon"
                     android:elevation="1dp" />
             </RelativeLayout>
